deploy/k3d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hemedical
  namespace: hemedical
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
